--- a/Projeto/Projeto/packages.config
+++ b/Projeto/Projeto/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
+  <package id="leeksnet.AspNet.WebApi.Wadl" version="0.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core.pt-br" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net461" />
