--- a/Projeto/Projeto/Projeto.csproj
+++ b/Projeto/Projeto/Projeto.csproj
@@ -275,6 +275,7 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Wadl.cshtml" />
+    <None Include="Properties\PublishProfiles\ProjetoAzureREST - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
